# x-ray_scripting_out

./: .editorconfig  .gitignore  IFIE_PIEDA_4poster.ipynb  MANIFEST.in  PIEDAvsXRay.ipynb  README.md  changelog.md  config.info  helper_man.sh  manager.sh  overall.sh  post_analysis1.ipynb  pyproject.toml  requirements-dev.txt  setup.py  step1.sh  step10.sh  step11.sh  step2.sh  step3.sh  step4.sh  step4_soc.sh  step5.sh  step6.sh  step7.sh  step8.sh  step9.sh  step9_soc.sh  tox.ini
BA_10.0A.out_out/: corevirtMO_matrix_ts_probability.csv  corevirt_fosc_e_matrix.csv  resA_MOcore.csv
BA_10.5A.out_out/: corevirtMO_matrix.csv  corevirtMO_matrix_ts_probability.csv
BA_11.0A.out_out/: corevirt_fosc_e_matrix.csv
BA_2.5A.out_out/: corevirtMO_matrix.csv  corevirtMO_matrix_ts_probability.csv  corevirt_fosc_e_matrix.csv  corevirt_fosc_v_matrix.csv  resA_MOcore.csv
BA_2.6A.out_out/: corevirtMO_matrix.csv  corevirt_fosc_v_matrix.csv
BA_2.7A.out_out/: corevirtMO_matrix_ts_probability.csv  corevirt_fosc_e_matrix.csv  corevirt_fosc_v_matrix.csv
BA_2.8A.out_out/: corevirtMO_matrix.csv  corevirt_fosc_e_matrix.csv
BA_2.9A.out_out/: corevirtMO_matrix.csv  corevirt_fosc_e_matrix.csv
BA_3.0A.out_out/: corevirtMO_matrix.csv  corevirt_fosc_v_matrix.csv
BA_3.5A.out_out/: corevirt_fosc_v_matrix.csv
BA_5.0A.out_out/: corevirt_fosc_e_matrix.csv  corevirt_fosc_v_matrix.csv
BA_5.5A.out_out/: corevirtMO_matrix_ts_probability.csv  corevirt_fosc_e_matrix.csv
BA_6.0A.out_out/: corevirtMO_matrix_ts_probability.csv  corevirt_fosc_e_matrix.csv  resA_MOcore.csv
BA_6.5A.out_out/: corevirtMO_matrix_ts_probability.csv  resA_MOcore.csv
BA_7.0A.out_out/: corevirtMO_matrix_ts_probability.csv
BA_7.5A.out_out/: corevirtMO_matrix.csv  corevirtMO_matrix_ts_probability.csv  corevirt_fosc_v_matrix.csv  resA_MOcore.csv
BA_8.0A.out_out/: corevirt_fosc_v_matrix.csv
BA_8.5A.out_out/: corevirtMO_matrix_ts_probability.csv  corevirt_fosc_v_matrix.csv
BA_9.0A.out_out/: resA_MOcore.csv
FY_PIEDA/: 1body_fmo_1_AB_10.0A_fmo_mp2.csv  1body_fmo_1_AB_10.5A_fmo_mp2.csv  1body_fmo_1_AB_11.0A_fmo_mp2.csv  1body_fmo_1_AB_2.5A_fmo_mp2.csv  1body_fmo_1_AB_2.6A_fmo_mp2.csv  1body_fmo_1_AB_2.7A_fmo_mp2.csv  1body_fmo_1_AB_2.8A_fmo_mp2.csv  1body_fmo_1_AB_2.9A_fmo_mp2.csv  1body_fmo_1_AB_3.0A_fmo_mp2.csv  1body_fmo_1_AB_3.1A_fmo_mp2.csv  1body_fmo_1_AB_3.2A_fmo_mp2.csv  1body_fmo_1_AB_3.3A_fmo_mp2.csv  1body_fmo_1_AB_3.4A_fmo_mp2.csv  1body_fmo_1_AB_3.5A_fmo_mp2.csv  1body_fmo_1_AB_3.6A_fmo_mp2.csv  1body_fmo_1_AB_3.7A_fmo_mp2.csv  1body_fmo_1_AB_3.8A_fmo_mp2.csv  1body_fmo_1_AB_3.9A_fmo_mp2.csv  1body_fmo_1_AB_4.0A_fmo_mp2.csv  1body_fmo_1_AB_4.1A_fmo_mp2.csv  1body_fmo_1_AB_4.2A_fmo_mp2.csv  1body_fmo_1_AB_4.3A_fmo_mp2.csv  1body_fmo_1_AB_4.4A_fmo_mp2.csv  1body_fmo_1_AB_4.5A_fmo_mp2.csv  1body_fmo_1_AB_4.6A_fmo_mp2.csv  1body_fmo_1_AB_4.7A_fmo_mp2.csv  1body_fmo_1_AB_4.8A_fmo_mp2.csv  1body_fmo_1_AB_4.9A_fmo_mp2.csv  1body_fmo_1_AB_5.0A_fmo_mp2.csv  1body_fmo_1_AB_5.1A_fmo_mp2.csv  1body_fmo_1_AB_5.2A_fmo_mp2.csv  1body_fmo_1_AB_5.3A_fmo_mp2.csv  1body_fmo_1_AB_5.4A_fmo_mp2.csv  1body_fmo_1_AB_5.5A_fmo_mp2.csv  1body_fmo_1_AB_5.6A_fmo_mp2.csv  1body_fmo_1_AB_5.7A_fmo_mp2.csv  1body_fmo_1_AB_5.8A_fmo_mp2.csv  1body_fmo_1_AB_5.9A_fmo_mp2.csv  1body_fmo_1_AB_6.0A_fmo_mp2.csv  1body_fmo_1_AB_6.1A_fmo_mp2.csv  (+104 more)
G3FG7Y.outAB_out/: corevirtMO_matrix_ts_probability.csv  resA_MOcore.csv  resB_MOcore_tmp.csv
G3FG7Y.outBA_out/: resB_MOcore_tmp.csv
G7FG3Y.outBA_out/: resB_MOcore_tmp.csv
docs/: architecture.md  building.md  contributing.md  data_processing_tests.md  examplesrun.md  goodtoknow_config.info.md  installation.md  publishing.md  quickstart.md  quickstart_old.md  regression_testing_examples.md
examples/: AB_4.0A.out  config.example.info  config.info_examplenosoc  config.info_examplesoc  examples_overview.md  readme.md
plots/: AB_10.0A.csv  AB_10.5A.csv  AB_11A.csv  AB_2.5A.csv  AB_2.6A.csv  AB_2.7A.csv  AB_2.8A.csv  AB_2.9A.csv  AB_3.0A.csv  AB_3.1A.csv  AB_3.2A.csv  AB_3.3A.csv  AB_3.4A.csv  AB_3.5A.csv  AB_3.6A.csv  AB_3.7A.csv  AB_3.8A.csv  AB_3.9A.csv  AB_4.0A.csv  AB_4.1A.csv  AB_4.2A.csv  AB_4.3A.csv  AB_4.4A.csv  AB_4.5A.csv  AB_4.6A.csv  AB_4.7A.csv  AB_4.8A.csv  AB_4.9A.csv  AB_5.1A.csv  AB_5.2A.csv  AB_5.3A.csv  AB_5.4A.csv  AB_5.5A.csv  AB_5.6A.csv  AB_5.7A.csv  AB_5.8A.csv  AB_5.9A.csv  AB_5A.csv  AB_6.1A.csv  AB_6.2A.csv  (+24 more)
pop_matrices/: corevirtMO_matrix_BA_G7FG3Y.csv  corevirtMO_matrix_BA_GFG9Y.csv  corevirtMO_matrix_FY_105_2nd.csv  corevirtMO_matrix_FY_105_3rd.csv  corevirtMO_matrix_FY_110.csv  corevirtMO_matrix_FY_110_2nd.csv  corevirtMO_matrix_FY_110_3rd.csv  corevirtMO_matrix_FY_25_2nd.csv  corevirtMO_matrix_FY_33.csv  (+1752 more)
(+37 files in other folders)
